--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,2 +1,9 @@
 server:
   port: 2360
+
+spring:
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 1GB
+      max-request-size: 1GB
