--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -9,7 +9,7 @@ spring:
       max-request-size: 1GB
   datasource:
     username: root
-    password:
+    password: 8qabyzjlyx
     url: jdbc:mysql://localhost:3306/vedioprocessing?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
     driver-class-name: com.mysql.cj.jdbc.Driver
 mybatis:
